    level via debian/compat to 4 instead of via DH_COMPAT in rules.
  * Depend on "debconf (>= 0.5) | debconf-2.0" instead of the only virtual
    "debconf-2.0".
  * Wrap build-deps and deps.
  * Update copyright file.
    - Use full download URL.
    - Include full GPL blob.
    - List GNOME Team as new maintainer.
  * Include AUTHORS in docs.

 -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 12:53:49 +0200

gdm (2.16.4-1.1) unstable; urgency=low

  * Porter NMU.
  * Disable SELinux on non-Linux architectures (Hurd, GNU/kFreeBSD).
    Fix gui/gdmchoosed.c wrt to PIPE_BUF (patch from upstream) to 
    support Hurd. (closes: #313008).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 26 Feb 2007 11:51:48 +0100

gdm (2.16.4-1) unstable; urgency=high

  * New upstream release
    + Fix for CVE-2006-6105, gdmchooser format string vulnerability (closes: #403219)
    + Fix for 64-bit portability problems (closes: #396259)
  * Fix typo in pam files (closes: #396696)
  * Update debian-moreblue theme to 0.5, and make it the default
  * Relax gdm-themes depends to Recommends because of the default theme change

 -- Ryan Murray <rmurray@debian.org>  Fri, 15 Dec 2006 15:11:04 -0800

gdm (2.16.1-1) unstable; urgency=high

  * New upstream release
    + Fixes CVE-2006-2452 (closes: #375281)
    + Failsafe session no longer made default (closes: #382698)
    + Typo fixed in fr.po (closes: #392611)
    + multiple login dialog updated (closes: #395003)
    + SuspendCommand works (closes: #367232)
    + gdmsetup image screen scrolling works (closes: #288286)
  * Fix typo in fr.po (closes: #372949)
  * Set RelaxPermissions=1 by default (closes: #339965)
  * Don't close all descriptors before starting the slave. (closes: #308825)
  * Parse /etc/default/locale in gdm pam files, for now (closes: #389466)
  * Set console to utf-8 if needed in XKeepsCrashing (closes: #387043)
  * Remove OK and Cancel buttons from included themes (closes: #377934)
  * Add debian-moreblue theme from