@@ -25,8 +25,11 @@ gdm (2.16.4-2) UNRELEASED; urgency=low
     - Include full GPL blob.
     - List GNOME Team as new maintainer.
   * Include AUTHORS in docs.
+  * Compute DEB_VERSION, DEB_NOEPOCH_VERSION, and DEB_UPSTREAM_VERSION
+    similarly to CDBS and finally compute MAJOR_MINOR for the GNOME version
+    included in the footer of man pages.
 
- -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 12:53:49 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 13:08:47 +0200
 
 gdm (2.16.4-1.1) unstable; urgency=low
 
